--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MYSQL_HOST=localhost
 MYSQL_USERNAME=root
 MYSQL_PASSWORD=
-MYSQL_DATABASE=fatora
+MYSQL_DATABASE=FoodFumes
 PORT=3000
 SECRET=if really don't know
 SIGNATURE=idon'tknowif4*fishequal2
